@@ -1,9 +1,0 @@
-module Erubis
-  module Generators
-    module TemplatePath
-      def source_root
-        @_haml_source_root ||= File.expand_path(File.join(File.dirname(__FILE__), 'erubis', generator_name, 'templates'))
-      end
-    end
-  end
-end
