@@ -1,2 +1,0 @@
-<h1><%= class_name %>#<%= @action %></h1>
-<p>Find me in <%= @path %></p>
