@@ -1,6 +1,0 @@
-<h1>Editing <%= singular_name %></h1>
-
-<%%= render 'form' %>
-
-<%%= link_to 'Show', @<%= singular_name %> %> |
-<%%= link_to 'Back', <%= plural_name %>_path %>
