@@ -1,5 +1,0 @@
-<h1>New <%= singular_name %></h1>
-
-<%%= render 'form' %>
-
-<%%= link_to 'Back', <%= plural_name %>_path %>
