@@ -1,12 +1,0 @@
-<p id="notice"><%%= notice %></p>
-
-<% for attribute in attributes -%>
-<p>
-  <b><%= attribute.human_name %>:</b>
-  <%%= @<%= singular_name %>.<%= attribute.name %> %>
-</p>
-
-<% end -%>
-
-<%%= link_to 'Edit', edit_<%= singular_name %>_path(@<%= singular_name %>) %> |
-<%%= link_to 'Back', <%= plural_name %>_path %>
