@@ -11,9 +11,4 @@ class Formtastic::Generators::FormBuilderGeneratorTest < Rails::Generators::Test
     run_generator %w(product_line title:string price:integer --template-engine haml --form-builder formtastic)
     assert_file "app/views/product_lines/_form.html.haml"
   end
-
-  test "should invoke form builder and output erubis form" do
-    run_generator %w(product_line title:string price:integer --template-engine erubis --form-builder formtastic)
-    assert_file "app/views/product_lines/_form.html.erb"
-  end
 end
