@@ -6,6 +6,7 @@
 * optimize
   * MongoMapper generators removed. MongoMapper (https://github.com/jnunemaker/mongomapper) has its own generators.
   * SimpleForm generators removed. SimpleForm (https://github.com/plataformatec/simple_form) has its own generators.
+	* Erubis generator removed.
 
 == 0.17.5
 * optimize
